[package]
name = "cstrml-locks"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
serde = { default-features = false, version = "1.0.116" }
serde_derive = { optional = true, version = "1.0.102" }
codec = { package = "parity-scale-codec", default-features = false, version = "2.0.0" }
rustc-hex = { default-features = false, version = "2.0.1" }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
frame-system = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
sp-runtime = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
sp-core = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
sp-std = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
sp-io = { default-features = false, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }

frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18" }

[dev-dependencies]
balances = { path = "../balances", package = "cstrml-balances" }
primitives = { package = "cst-primitives", path = "../../primitives", features = ["test"] }
hex-literal = "0.3.1"
frame-benchmarking = { git = "https://github.com/crustio/substrate", rev = "1495ddae7caf1d1e541084e85507fa49f8cb3a18"}

[features]
default = ["std"]
std = [
    "serde/std",
    "serde_derive",
    "rustc-hex/std",
    "codec/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-io/std",
    "frame-support/std",
    "frame-system/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]