[package]
name = "cstrml-market"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = "parity-scale-codec", features = ["derive"], version = "2.0.0" }
serde = { optional = true, version = "1.0.116" }
serde_json = "1.0.51"

# substrate frames
frame-system = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }
frame-support = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }

# substrate primitives
sp-core = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }
sp-io = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }
sp-runtime = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }
sp-std = { default-features = false, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }

frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a" }

# crust runtime modules
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-system/std",
    "primitives/std",
]
runtime-benchmarks = [
    "frame-benchmarking",
]

[dev-dependencies]
hex = "0.4.2"
swork = { package = "cstrml-swork", path = "../swork" }
balances = { package = "cstrml-balances", path = "../balances" }
primitives = { package = "cst-primitives", path = "../../primitives", features = ["test"] }
frame-benchmarking = { git = "https://github.com/mmyyrroonn/substrate", rev = "4a099fc018f066288b28917d2f73f1823b7a7b9a"}
