[package]
name = "cstrml-market-v2"
version = "0.10.0"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = 'parity-scale-codec', version = '1.3.4', features = ["derive"] }
serde = { optional = true, version = '1.0.106' }
serde_json = "1.0.51"

# substrate frames
frame-system = { default-features = false, version = '2.0.0' }
frame-support = { default-features = false, version = '2.0.0' }

# substrate primitives
sp-core = { default-features = false, version = '2.0.0' }
sp-io = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { default-features = false, version = '2.0.0' }

frame-benchmarking = { version = '2.0.0', default-features = false, optional = true }

# crust runtime modules
primitives = { version = "0.10.0", package = 'cst-primitives', path = '../../primitives', default-features = false }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-system/std',
    'primitives/std',
]
runtime-benchmarks = [
    "frame-benchmarking",
]

[dev-dependencies]
hex = '0.4.2'
swork = { version = "0.10.0", package = 'cstrml-swork', path = '../swork' }
balances = { version = "0.10.0", package = 'cstrml-balances', path = '../balances' }
frame-benchmarking = { version = '2.0.0' }
keyring = { package = "sp-keyring", version = '2.0.0' }
