[package]
name = "cstrml-payment"
version = "0.3.0"
authors = ["Crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = 'parity-scale-codec', version = '1.3.0', features = ["derive"] }
serde = { optional = true, version = '1.0.106' }
serde_json = "1.0.51"

# substrate frames
system = { package = 'frame-system', default-features = false, version = '2.0.0-alpha.6' }
frame-support = { default-features = false, version = '2.0.0-alpha.6' }

# substrate primitives
sp-core = { default-features = false, version = '2.0.0-alpha.6' }
sp-io = { default-features = false, version = '2.0.0-alpha.6' }
sp-runtime = { default-features = false, version = '2.0.0-alpha.6' }
sp-std = { default-features = false, version = '2.0.0-alpha.6' }

# crust runtime modules
primitives = { package = 'cst-primitives', path = '../../primitives', default-features = false }
market = { package = 'cstrml-market', path = '../market', default-features = false }
balances = { package = 'cstrml-balances', path = '../balances', default-features = false }

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'system/std',
    'primitives/std',
    'market/std',
    'balances/std'
]

[dev-dependencies]
hex = '0.4.2'
tee = { package = 'cstrml-tee', path = '../tee' }
balances = { package = 'cstrml-balances', path = '../balances' }
scheduler = { package = 'pallet-scheduler', version = '2.0.0-alpha.6' }

