[package]
name = "cstrml-session"
version = "0.2.1"
authors = ["Crustio"]
edition = "2018"

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
sp-staking = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
sp-trie = { optional = true, default-features = false, git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
impl-trait-for-tuples = "0.1.3"

[dev-dependencies]
sp-core = { version = "2.0.0", git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
sp-application-crypto = { version = "2.0.0", git = "https://github.com/paritytech/substrate", rev = '3e651110aa06aa835790df63410a29676243fc54' }
lazy_static = "1.4.0"

[features]
default = ["std", "historical"]
historical = ["sp-trie"]
std = [
	"serde",
	"codec/std",
	"sp-std/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-timestamp/std",
	"sp-trie/std",
	"sp-io/std",
]

