[package]
name = "cstrml-staking"
version = "0.10.0"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
serde = { version = "1.0.116", optional = true }
safe-mix = { version = "1.0.0", default-features = false }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# substrate frame dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = "master", features = ["historical"], default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }

# substrate primitives
sp-keyring = { optional = true, git = "https://github.com/paritytech/substrate", branch = "master" }
sp-std = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-io ={ git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
sp-staking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master", default-features = false, optional = true }
rand_chacha = { version = "0.2", default-features = false }

# crust runtime modules
swork = { version = "0.10.0", package = "cstrml-swork", path = "../swork", default-features = false }
primitives = { version = "0.10.0", package = 'cst-primitives', path = '../../primitives', default-features = false }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", branch = "master" }
balances = { version = "0.10.0", package = 'cstrml-balances', path = '../balances' }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = "master" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", branch = "master" }

# private crate inside substrate
substrate-test-utils = { git = "https://github.com/paritytech/substrate", branch = "master" }

[features]
equalize = []
migrate = []
default = ["std", "equalize"]
std = [
	"serde",
	"safe-mix/std",
	"sp-keyring",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"swork/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
]