[package]
name = "cstrml-staking"
version = "0.12.0"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
serde = { optional = true, version = "1.0.116" }
safe-mix = { default-features = false, version = "1.0.0" }
codec = { package = "parity-scale-codec", default-features = false, features = ["derive"], version = "2.0.0" }

# substrate frame dependencies
frame-support = { default-features = false, version = "3.0.0" }
frame-system = { default-features = false, version = "3.0.0" }
pallet-session = { features = ["historical"], default-features = false, version = "3.0.0" }
pallet-authorship = { default-features = false, version = "3.0.0" }

# substrate primitives
sp-keyring = { optional = true, version = "3.0.0" }
sp-std = { default-features = false, version = "3.0.0" }
sp-io ={ default-features = false, version = "3.0.0" }
sp-runtime = { default-features = false, version = "3.0.0" }
sp-staking = { default-features = false, version = "3.0.0" }
frame-benchmarking = { default-features = false, optional = true, version = "3.0.0" }
rand_chacha = { default-features = false, version = "0.2" }

# crust runtime modules
swork = { package = "cstrml-swork", path = "../swork", default-features = false }
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }

[dev-dependencies]
sp-core = "3.0.0"
balances = { package = "cstrml-balances", path = "../balances" }
pallet-timestamp = "3.0.0"
frame-benchmarking = "3.0.0"

# private crate inside substrate
substrate-test-utils = "3.0.0"

[features]
equalize = []
migrate = []
default = ["std", "equalize"]
std = [
	"serde",
	"safe-mix/std",
	"sp-keyring",
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"frame-support/std",
	"sp-runtime/std",
	"sp-staking/std",
	"pallet-session/std",
	"frame-system/std",
	"pallet-authorship/std",
	"swork/std"
]
runtime-benchmarks = [
    "frame-benchmarking",
]