[package]
name = "cstrml-swork"
version = "0.11.2"
authors = ["crustio"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = 'parity-scale-codec', version = '1.3.4' }
serde = { optional = true, version = '1.0.116' }
serde_json = "1.0.55"
signatory = "0.20.0"
signatory-ring = "0.20.0"
hex = '0.4.2'
base64 = "0.12.2"
openssl = { optional = true, version = "0.11.29" }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }

# substrate primitives
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }
sp-runtime-interface = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652", default-features = false, optional = true }

# crust runtime modules
market = { version = "0.11.2", package = 'cstrml-market', path = '../market', default-features = false }
primitives = { version = "0.11.2", package = 'cst-primitives', path = '../../primitives', default-features = false }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }
balances = { version = "0.11.2", package = 'cstrml-balances', path = '../balances' }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", rev = "668ecade60abe5a644868aefd3d231c9839fe652" }
hex = '0.4.2'

[features]
default = ['std']
std = [
    'serde',
    'openssl',
    'codec/std',
    'frame-support/std',
    'sp-core/std',
    'sp-io/std',
    'sp-runtime/std',
    'sp-std/std',
    'frame-system/std',
    'sp-runtime-interface/std',
    'market/std',
    'primitives/std'
]
runtime-benchmarks = [
    "frame-benchmarking",
]