[package]
name = "cstrml-swork"
version = "1.0.0"
authors = ["crustio"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://crust.network"
repository = "https://github.com/crustio/crust/"

[dependencies]
# third party dependencies
codec = { default-features = false, package = "parity-scale-codec", version = "2.0.0" }
serde = { optional = true, version = "1.0.116" }
base64 = { default-features = false, features = ["alloc"], version = "0.12.2" }
p256 = { default-features = false, features = ["ecdsa"], version = "0.5.1" }

# substrate frame dependencies
frame-support = { default-features = false, git = "https://github.com/crustio/substrate", rev = "3971a18dd746ff5190d2d274cfcdaf7dae5f8ce4" }
frame-system = { default-features = false, git = "https://github.com/crustio/substrate", rev = "3971a18dd746ff5190d2d274cfcdaf7dae5f8ce4" }

# substrate primitives
sp-core = { default-features = false, git = "https://github.com/crustio/substrate", rev = "3971a18dd746ff5190d2d274cfcdaf7dae5f8ce4" }
sp-io = { default-features = false, git = "https://github.com/crustio/substrate", rev = "3971a18dd746ff5190d2d274cfcdaf7dae5f8ce4" }
sp-runtime = { default-features = false, git = "https://github.com/crustio/substrate", rev = "3971a18dd746ff5190d2d274cfcdaf7dae5f8ce4" }
sp-std = { default-features = false, git = "https://github.com/crustio/substrate", rev = "3971a18dd746ff5190d2d274cfcdaf7dae5f8ce4" }

# crust runtime modules
primitives = { package = "cst-primitives", path = "../../primitives", default-features = false }
webpki = { package = "webpki", path = "../../utils/webpki", default-features = false }
serde_json = { package = "serde_json_no_std", path = "../../utils/serde_json_no_std", default-features = false, features = ["alloc"] }

[dev-dependencies]
keyring = { package = "sp-keyring", git = "https://github.com/crustio/substrate", rev = "3971a18dd746ff5190d2d274cfcdaf7dae5f8ce4" }
balances = { package = "cstrml-balances", path = "../balances" }
primitives = { package = "cst-primitives", path = "../../primitives", features = ["test"] }
market = { package = "cstrml-market", path = "../market" }
hex = "0.4.2"

[features]
default = ["std"]
std = [
    "serde",
    "codec/std",
    "frame-support/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "frame-system/std",
    "primitives/std",
    "webpki/std"
]